apps/kustomize/kubernetes-dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - dashboard.apps.timgiertz.com
  rules:
  - matches:
    backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
